--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-Django<=1.3.1
-South
-psycopg2==2.4.2
+remote: Collecting gunicorn==19.0.0
+gunicorn==19.6.0
+virtualenv==15.0.2
+virtualenvwrapper-win==1.2.1
+
